@@ -12,6 +12,6 @@
 #include "main.h"
 
 void brake_init (void);
-BitStatus brake_is_set (void);
+//BitStatus brake_is_set (void);
 
 #endif /* _BRAKE_H */
