@@ -1,5 +1,5 @@
 @echo off
-PATH = %PATH%;C:\SDCC\usr\local\bin;C:\SDCC\bin;%~dp0..\..\tools\cygwin\bin
+PATH = %PATH%;C:\SDCC\usr\local\bin;C:\SDCC\bin;%~dp0..\..\tools\cygwin\bin;C:\Program Files\SDCC\usr\local\bin;C:\Program Files\SDCC\bin;%~dp0..\..\tools\cygwin\bin
 
 make -f Makefile_windows clean
 make -f Makefile_windows
